# sid-server

./: .gitignore  README.md  pyproject.toml  shell.nix
src/core/: settings.py  urls.py
src/survey/: urls.py  views.py
src/survey/templates/survey/: index.html
